@@ -1,5 +1,8 @@
 ChangeLog for the Astro project.
 
+20200126:
+	* document all known configuration options
+
 20200117:
 	* make calibration faster by moving simultanously
 	* add configuration keys for hot pixel detection and calibration
